using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Player : MonoBehaviour
{
    //States
    string IDLING = "IDLING";
    string SKIPPING = "SKIPPING";
    string CLIMBING = "CLIMBING";
    string FALLING = "FALLING";
    string DUCKING = "DUCKING";
    string JUMPING = "JUMPING";
    string HURT = "HURT";

    // Start is called before the first frame update
    void Start()
    {
        
    }

    // Update is called once per frame
    void Update()
    {
        
    }
}
